--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,38 @@
-.flex-container{
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    background-color: #333;
-    padding: 50px 10px;
+  color: #eee;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
 }
-h1{
-    color: #ff004f;
-    margin-top: 0;
+
+#game {
+  text-align: center;
+  background: #363636;
+  align-items: center;
+  border-radius: 15px;
+  margin: 0 auto;
+  padding: 10px;
 }
-button{
-    width: 180px;
-    height: 70px;
-    background: #ff004f;
-    border-radius: 15px;
-    color: #fff;
-    font-size: large;
-    font-weight: 900;
-    text-shadow: 2px 2px 10px #111;
-    box-shadow: 2px 2px 10px #fff;
-    
+
+button {
+  font-size: 16px;
+  margin: 5px;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 600;
+
 }
 
 button:hover{
-  color: #ff004f;
-  background-color: #111;
-  transition: 0.3s;
-  scale: 1.2;
-}
-
-.info{
-    font-size: 20px;
-    color: #eee;
-    line-height: 1.5;
-  
-
-}
-
-
-kbd {
-  background-color: #eee;
-  border-radius: 3px;
-  border: 1px solid #b4b4b4;
-  box-shadow:
-    0 1px 1px rgba(0, 0, 0, 0.2),
-    0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
-  color: #333;
-  display: inline-block;
-  font-size: 0.85em;
-  font-weight: 700;
-  line-height: 1;
-  padding: 2px 4px;
-  white-space: nowrap;
+  scale: 1.05;
+  box-shadow: 2px 2px 10px #000;
+  background-color: black;
+  color: #eee;
+  text-shadow: 1px 1px 10px #fff;
 }
