--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -7,6 +8,15 @@ body {
   color: #eee;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
+  text-align: center;
+
+}
+
+#heading{
+  font-size: 30px;
+  color: #363636;
+  text-shadow: 1px 1px 3px #222;
+
 }
 
 #game {
@@ -16,6 +26,12 @@ body {
   border-radius: 15px;
   margin: 0 auto;
   padding: 10px;
+  box-shadow: 2px 2px 10px  black;
+}
+
+#game:hover{
+  scale: 1.05;
+  transition: 0.5s;
 }
 
 button {
@@ -30,9 +46,11 @@ button {
 }
 
 button:hover{
-  scale: 1.05;
+  scale: 1.01;
   box-shadow: 2px 2px 10px #000;
   background-color: black;
   color: #eee;
-  text-shadow: 1px 1px 10px #fff;
+  text-shadow: 1px 1px 5px #fff;
+  transition: 0.3s;
+
 }
