--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,70 @@
+
+
 body {
+  font-family: 'Arial', sans-serif;
+  background-color: #262626;
+  color: #fff;
+  text-shadow: 1px 1px 3px #252525;
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
-  color: #eee;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  text-align: center;
-
 }
 
 #heading{
   font-size: 30px;
-  color: #363636;
-  text-shadow: 1px 1px 3px #222;
+  color: #fff;
+  text-shadow: 1px 1px 3px #363636;
 
 }
+
 
 #game {
   text-align: center;
-  background: #363636;
-  align-items: center;
-  border-radius: 15px;
-  margin: 0 auto;
-  padding: 10px;
-  box-shadow: 2px 2px 10px  black;
-}
-
-#game:hover{
-  scale: 1.05;
-  transition: 0.5s;
+  background-color: #363636;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 button {
   font-size: 16px;
-  margin: 5px;
-  padding: 10px;
+  padding: 10px 20px;
+  margin: 10px;
   cursor: pointer;
-  border-radius: 10px;
-  font-size: 20px;
   font-weight: 600;
+  text-shadow: 1px 1px 5px #eee;  
+  border-radius: 10px;
+}
+
+#result {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+  color: #0077cc;
+  text-shadow: 1px 1px 3px #252525;
+
 
 }
 
-button:hover{
-  scale: 1.01;
-  box-shadow: 2px 2px 10px #000;
-  background-color: black;
-  color: #eee;
-  text-shadow: 1px 1px 5px #fff;
-  transition: 0.3s;
 
+#gameOver {
+  font-size: 28px;
+  font-weight: bold;
+  color: #e74c3c;
+  text-shadow: 1px 1px 3px #252525;
+
+  margin-top: 20px;
+}
+
+button:hover {
+  background-color: #3498db;
+  color: #fff;
+  border-radius: 10px;
+  scale: 1.05;
+  box-shadow: 2px 2px 5px #252525;
+  text-shadow: 0px 0px 5px #252525;
+  transition: 0.2s;
 }
