--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   font-size: 30px;
   color: #fff;
   text-shadow: 1px 1px 3px #363636;
+  margin-top: 0;
 
 }
 
@@ -67,4 +68,9 @@ button:hover {
   box-shadow: 2px 2px 5px #252525;
   text-shadow: 0px 0px 5px #252525;
   transition: 0.2s;
+}
+
+.fa-github{
+  font-size: 22px;
+
 }
